# Android-rat

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  FEATURES.md  PYTHON_VS_JAVA.md  QUICK_START.md  README.md  SIMPLE_INSTALL.md  SUMMARY.md  create_simple_apk.sh  generate_icons.py  package_into_apk.sh  repackage_apk.sh
APK_Modifier_Ready/: AndroidManifest.xml  classes2.dex  classes3.dex  resources.arsc
APK_Modifier_Ready/assets/: README.txt
APK_Modifier_Ready/assets/config/: app_config.json
APK_Modifier_Ready/res/anim-v21/: m3_side_sheet_exit_to_left.xml  m3_side_sheet_exit_to_right.xml
APK_Modifier_Ready/res/animator/: m3_card_state_list_anim.xml  m3_extended_fab_hide_motion_spec.xml  m3_extended_fab_show_motion_spec.xml  mtrl_card_state_list_anim.xml
APK_Modifier_Ready/res/color/: abc_primary_text_material_dark.xml  m3_assist_chip_stroke_color.xml  (+42 more)
YouTube Premium_1.0/: AndroidManifest.xml  classes4.dex
android-app/: FEATURES_SUMMARY.md  INSTALLATION_GUIDE.md  README.md  TELEGRAM_BOT_GUIDE.md  settings.gradle
android-app-lite/: README.md
android-app-lite/app/: build.gradle
android-app/app/: build.gradle  dictionary.txt  proguard-rules.pro
android-app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
apk modifier src/: .env.example  ADVANCED_FEATURES.md  ADVANCED_USAGE.md  BUILD.sh  COMPLETE_FEATURES.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  README_SOURCE.md  TEST_VALIDATION.sh  app.py  app_advanced.py
apk modifier src/android-app/: build.gradle
apk modifier src/utils/: advanced_apk_modifier.py
utils/: __init__.py  apk_modifier.py
(+227 files in other folders)
